--- a/LetvWallet/res/layout/wallet_main_item_banner.xml
+++ b/LetvWallet/res/layout/wallet_main_item_banner.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/rounded_rectangle_white"
+    android:padding="1dp"
     >
     <FrameLayout
         android:layout_width="match_parent"
