--- a/LetvWallet/res/layout/wallet_main_item_service.xml
+++ b/LetvWallet/res/layout/wallet_main_item_service.xml
@@ -2,6 +2,8 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/content_item_bg_color"
+    android:background="@drawable/rounded_rectangle_white"
+    android:padding="1dp"
     android:overScrollMode="never"
+    android:layout_marginTop="6dp"
     />
