--- a/LetvWallet/res/values/colors.xml
+++ b/LetvWallet/res/values/colors.xml
@@ -148,4 +148,10 @@
     <color name="member_color_text">#404040</color>
     <color name="member_color_sub_text">#808080</color>
     <color name="member_color_to_pay">#FF8A53</color>
+
+    <!--me-->
+    <color name="me_primary_color">#447DE9</color>
+    <color name="me_tab_default_color">#808080</color>
+
+
 </resources>
