--- a/LetvWallet/res/values/styles.xml
+++ b/LetvWallet/res/values/styles.xml
@@ -230,4 +230,50 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="MeListItemTextStyle" >
+        <item name="android:textColor">#262626</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="MeListItemFlagTextStyle" >
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="MeListItem" parent="MeListItemTextStyle">
+        <item name="android:layout_marginLeft">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:layout_marginRight">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:paddingLeft">@dimen/me_list_item_padding_horizontal</item>
+        <item name="android:paddingRight">@dimen/me_list_item_padding_horizontal</item>
+    </style>
+
+    <style name="MeListItemSingleLine" parent="MeListItem">
+        <item name="android:background">@drawable/btn_round_shape_white</item>
+    </style>
+
+    <style name="MeListItemMultipleLineTop" parent="MeListItem">
+        <item name="android:background">@drawable/btn_top_round_shape_white</item>
+    </style>
+
+    <style name="MeListItemMultipleLineBottom" parent="MeListItem">
+        <item name="android:background">@drawable/btn_bottom_round_shape_white</item>
+    </style>
+
+    <style name="MeListDividerLine" >
+        <item name="android:layout_marginLeft">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:layout_marginRight">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:paddingLeft">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:paddingRight">@dimen/me_list_item_margin_horizontal</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:src">#D9D9D9</item>
+
+    </style>
+
+    <style name="MeTipsTextStyle" >
+        <item name="android:textColor">@color/me_primary_color</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
