143-wallet: 调整钱包主题颜色,ActionBar背景/Icon/文字颜色
Ticket: LEUIAPP-426
Solution:
添加webview页面主题
修改控件主题颜色
替换UI资源

Change-Id: I624798b1572d3680719502acf296d5fc0204a72d
Signed-off-by: huhongbin <huhongbin@le.com>

--- a/LetvWallet/res/drawable/mobile_product_textcolor.xml
+++ b/LetvWallet/res/drawable/mobile_product_textcolor.xml
@@ -4,5 +4,5 @@
     <item android:state_selected="true" android:color="@color/mobile_product_tv_press_color" />
     <item android:state_focused="true" android:color="@color/mobile_product_tv_press_color" />
     <item android:state_pressed="true" android:color="@color/mobile_product_tv_press_color" />
-    <item android:color="@color/colorMobilePrimary" />
+    <item android:color="?attr/walletPrimaryColor" />
 </selector>
