--- a/LetvWalletCommon/res/values/theme.xml
+++ b/LetvWalletCommon/res/values/theme.xml
@@ -10,7 +10,7 @@
 
         <item name="android:windowContentOverlay">@null</item>
         <item name="actionBarSize">40dp</item>
-        <item name="walletPrimaryColor">@color/wallet_common_primary_color</item>
+        <item name="walletPrimaryColor">@color/wallet_statusbar_color</item>
 
         <!--<item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@color/colorStatusBar</item>-->
@@ -46,5 +46,10 @@
     </style>
     <style name="AppTheme.Arrow">
         <item name="actionBarStyle">@style/Wallet.Actionbar.Arrow</item>
+    </style>
+    <style name="AppTheme.WebView">
+        <item name="walletPrimaryColor">@color/wallet_common_primary_color</item>
+        <item name="android:statusBarColor">@color/wallet_statusbar_white_color</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
