--- a/LetvWallet/res/drawable/ic_menu_filter_disabled.xml
+++ b/LetvWallet/res/drawable/ic_menu_filter_disabled.xml
@@ -5,6 +5,8 @@ android:height="24dp"
 android:viewportWidth="96"
 android:viewportHeight="96">
 <path
-    android:fillColor="#898b94"
-    android:pathData="M82.953,13.122H13.047c-1.657,0-2.595,1.899-1.589,3.215L46,61.512V86.5 		c0,1.104,0.896,2,2,2s2-0.896,2-2V61.512l34.542-45.175C85.548,15.021,84.609,13.122,82.953,13.122z M48,57.543L17.094,17.122 		h61.812L48,57.543z"/>
+    android:fillColor="@color/wallet_actionBar_icon_disable_color"
+    android:pathData="M48.2,55.8v-2.7L46.6,51L24.7,21.8h46.7 M71.4,21.8L49.8,51l-1.6,2.1v2.6 M79.2,13.8H16.5
+		c-3.3,0-5,3.8-3,6.4l26.7,35.6v22.4c0,2.3,1.8,4,3.9,4c0.6,0,1.2-0.1,1.7-0.4l8.1-4c1.4-0.7,2.3-2.1,2.3-3.6V55.8l26.3-35.6
+		C84.5,17.6,82.4,13.8,79.2,13.8L79.2,13.8z"/>
 </vector>
