--- a/LetvWallet/res/drawable/ic_menu_filter_selected.xml
+++ b/LetvWallet/res/drawable/ic_menu_filter_selected.xml
@@ -5,6 +5,7 @@ android:viewportHeight="96"
 android:width="24dp"
 android:height="24dp">
 <path
-android:fillColor="?attr/walletPrimaryColor"
-android:pathData="M83,13.1H13c-1.7,0-2.6,1.9-1.6,3.2L46,61.5v25c0,1.1,0.9,2,2,2s2-0.9,2-2v-25l34.5-45.2 		C85.5,15,84.6,13.1,83,13.1z"/>
+android:fillColor="#FFFFFF"
+android:pathData="M79.2,13.8H16.5c-3.3,0-5,3.8-3,6.4l26.7,35.6v22.4c0,3,3,4.9,5.6,3.6l8.1-4
+		c1.4-0.7,2.3-2.1,2.3-3.6V55.8l26.3-35.6C84.5,17.6,82.4,13.8,79.2,13.8z"/>
 </vector>
