--- a/LetvWallet/res/drawable/ic_movie_tab_cinema.xml
+++ b/LetvWallet/res/drawable/ic_movie_tab_cinema.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" android:state_pressed="false"
-        android:drawable="@drawable/ic_movie_tab_cinema_pressed" />
-    <item android:state_focused="true" android:state_pressed="true"
-        android:drawable="@drawable/ic_movie_tab_cinema_pressed" />
-    <item android:state_focused="false" android:state_pressed="true"
-        android:drawable="@drawable/ic_movie_tab_cinema_pressed" />
-    <item android:state_selected="true"
-        android:drawable="@drawable/ic_movie_tab_cinema_pressed" />
+    <item android:drawable="@drawable/ic_movie_tab_cinema_pressed" android:state_focused="true" android:state_pressed="false" />
+    <item android:drawable="@drawable/ic_movie_tab_cinema_pressed" android:state_focused="true" android:state_pressed="true" />
+    <item android:drawable="@drawable/ic_movie_tab_cinema_pressed" android:state_focused="false" android:state_pressed="true" />
+    <item android:drawable="@drawable/ic_movie_tab_cinema_pressed" android:state_selected="true" />
     <item android:drawable="@drawable/ic_movie_tab_cinema_normal" />
 </selector>
