--- a/LetvWallet/res/drawable/menu_favorites_checked.xml
+++ b/LetvWallet/res/drawable/menu_favorites_checked.xml
@@ -1,10 +1,12 @@
-<vector
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:viewportWidth="120"
-android:viewportHeight="120"
-android:width="24dp"
-android:height="24dp">
-<path
-android:fillColor="?attr/walletPrimaryColor"
-android:pathData="M60,8.6c-1.2,0-2.6,0.6-3.2,2L41.9,40L9.4,45.1c-3,0.4-4.1,4.1-2,6.1l23.2,23.1l-5.1,32.8 		c-0.4,2.4,1.5,4.2,3.6,4.2c0.5,0,1.1-0.1,1.6-0.4L60,96l29.2,15c0.5,0.2,1.1,0.4,1.6,0.4c2.1,0,4-1.9,3.6-4.2l-5.1-32.6l23.2-23.2 		c2.1-2.1,1-5.8-2-6.2L78,39.8L63.2,10.6C62.6,9.2,61.2,8.6,60,8.6L60,8.6z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="96"
+    android:viewportWidth="96">
+    <path
+        android:fillColor="@color/wallet_actionBar_icon_color"
+        android:pathData="M87.2,38.9c-0.4-1.2-1.5-2.1-2.7-2.3l-23.2-3.4L51,12.3c-0.6-1.2-1.7-1.9-3-1.9
+		s-2.5,0.7-3,1.9L34.6,33.2l-23.1,3.4c-1.3,0.2-2.3,1.1-2.7,2.3s-0.1,2.6,0.9,3.5l16.7,16.3l-3.9,23c-0.4,1.2,0.2,2.5,1.2,3.3
+		s2.4,0.9,3.6,0.3L48,74.4l20.6,10.8c0.5,0.3,1,0.4,1.6,0.4c0.7,0,1.4-0.2,2-0.6c1-0.8,1.6-2,1.3-3.3l-3.9-23l16.7-16.3
+		C87.2,41.5,87.6,40.1,87.2,38.9z" />
 </vector>
