--- a/LetvWallet/res/drawable/menu_favorites_uncheck.xml
+++ b/LetvWallet/res/drawable/menu_favorites_uncheck.xml
@@ -6,5 +6,9 @@ android:width="24dp"
 android:height="24dp">
 <path
 android:fillColor="@color/wallet_actionBar_icon_color"
-android:pathData="M48,12.2l10.9,21.5l0.9,1.8l2,0.3l24,3.8L68.7,56.8l-1.4,1.4l0.3,2l3.8,24l-21.5-11 		L48,72.3l-1.8,0.9l-21.5,11l3.8-24.1l0.3-2l-1.4-1.4l-17.1-17l23.9-3.8l2-0.3l0.9-1.8L48,12.2 M48,6.9c-1,0-2.1,0.5-2.6,1.6 		L33.5,32l-26,4.1c-2.4,0.3-3.3,3.3-1.6,4.9l18.6,18.5l-4.1,26.2c-0.3,1.9,1.2,3.4,2.9,3.4c0.4,0,0.9-0.1,1.3-0.3l23.4-12l23.4,12 		c0.4,0.2,0.9,0.3,1.3,0.3c1.7,0,3.2-1.5,2.9-3.4l-4.1-26.1l18.6-18.6c1.7-1.7,0.8-4.6-1.6-5l-26.1-4.2L50.6,8.5 		C50.1,7.4,49,6.9,48,6.9L48,6.9z"/>
+android:pathData="M27.7,86.3c-1.6,0-3.1-0.5-4.3-1.5c-2.2-1.7-3.2-4.5-2.5-7L24,59.1L10.3,45.8
+		c-2-1.9-2.7-4.7-1.9-7.4c0.8-2.5,3-4.4,5.6-4.8l19-2.8l8.5-17.1c1.1-2.5,3.6-4,6.4-4c2.7,0,5.1,1.5,6.3,3.9l8.5,17.2l19.1,2.8
+		c2.7,0.4,4.9,2.3,5.7,4.8l0,0c0.8,2.5,0.1,5.4-1.8,7.3L72,59.1l3.2,18.8c0.5,2.5-0.5,5.2-2.6,6.9L72.3,85c-1.2,0.8-2.6,1.2-4,1.2
+		c-1.3,0-2.4-0.3-3.4-0.9L48,76.5l-17,9C29.9,86,28.8,86.3,27.7,86.3z M17.2,41.3l15.4,15.1L29,77.5l19-10l19,10l-3.6-21.1
+		l15.4-15.1l-21.4-3.1L48,18.9l-9.6,19.2L17.2,41.3z"/>
 </vector>
