--- a/LetvWallet/res/drawable/mobile_product_bg.xml
+++ b/LetvWallet/res/drawable/mobile_product_bg.xml
@@ -3,15 +3,15 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
-            <solid android:color="@color/colorMobilePrimary" />
-            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
+            <solid android:color="?attr/walletPrimaryColor" />
+            <stroke android:color="?attr/walletPrimaryColor" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
-            <solid android:color="@color/colorMobilePrimary" />
-            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
+            <solid android:color="?attr/walletPrimaryColor" />
+            <stroke android:color="?attr/walletPrimaryColor" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
 
@@ -26,7 +26,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
             <solid android:color="@android:color/transparent" />
-            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
+            <stroke android:color="?attr/walletPrimaryColor" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
 </selector>
