--- a/LetvWallet/res/layout/movie_soon_filter.xml
+++ b/LetvWallet/res/layout/movie_soon_filter.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/statusBarColor"
+    android:background="@color/movie_soon_filter_bg_color"
     android:orientation="vertical"
     android:id="@+id/ll_sort"
     android:visibility="gone">
