--- a/LetvWalletCommon/res/values/colors.xml
+++ b/LetvWalletCommon/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="wallet_common_primary_color">#54555C</color>
     <color name="wallet_statusbar_color">#447DE9</color>
+    <color name="wallet_statusbar_white_color">#F6F6F7</color>
     <color name="divider_horizontal_color">#DFDFDF</color>
     <color name="divider_secondary_horizontal_color">#DFDFDF</color>
     <color name="wallet_windowBackground_color">#EEEEF0</color>
@@ -11,6 +12,7 @@
     <color name="wallet_toolbar_titleTv_color">@android:color/black</color>
     <color name="wallet_toolbar_titleBg_color">@android:color/white</color>
     <color name="wallet_actionBar_icon_color">@android:color/white</color>
+    <color name="wallet_actionBar_icon_disable_color">#99FFFFFF</color>
 
     <color name="colorLabelTv">@android:color/black</color>
     <color name="colorContentTv">#54555C</color>
