131-Lepay: Account : 用户帐号信息、订单记录，实名认证 文案翻译
Ticket: LEUI-20458

Change-Id: I138adffe359095cbc4e1f4c32206f3f6641477d0
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/res/layout/main_tab_my.xml
+++ b/LetvWallet/res/layout/main_tab_my.xml
@@ -103,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/me_list_item_height"
         android:layout_marginTop="@dimen/me_list_item_divider_space"
-        android:text="@string/me_bills"/>
+        android:text="@string/total_order_list_label"/>
 
     <TextView
         android:id="@+id/tvVipLevel"
