131-Lepay: Account : 实名认证流程
未登录乐视账号 返回； 账号登出返回 ；
操作实名认证成功： setResult（OK） 返回；

Ticket: LEUIAPP-263

Change-Id: I2ec44b5a6822fa23ae7ecf890651d9bcf4965da0
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/layout/account_verify_activity.xml
+++ b/LePay/res/layout/account_verify_activity.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <EditText
+    <com.letv.wallet.account.ui.RealNameEditText
         android:id="@+id/editRealName"
         android:layout_width="match_parent"
         android:layout_height="@dimen/account_list_item_height"
         android:gravity="center_vertical"
         style="@style/AccountVerifyEditeViewStyle"
         android:textCursorDrawable="@drawable/color_cursor"
-        android:hint="@string/account_verify_input_real_name" />
+        android:hint="@string/account_verify_input_real_name"
+        android:maxLines="1"
+        android:maxLength="20"
+        android:inputType="text"
+        android:imeOptions="actionNext"/>
     <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
         style="@style/AccountVerifyLine"
         android:layout_below="@id/editRealName"/>
 
-    <EditText
+    <com.letv.wallet.account.ui.IdNoEditText
         android:id="@+id/editIdNo"
         android:layout_below="@id/line1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/account_list_item_height"
         android:gravity="center_vertical"
         android:inputType="number"
-        android:digits="0123456789xyzXYZ"
+        android:maxLines="1"
+        android:digits="0123456789xX"
+        android:imeOptions="actionNext"
         style="@style/AccountVerifyEditeViewStyle"
         android:hint="@string/account_verify_input_id_no"/>
 
@@ -37,13 +44,14 @@
         style="@style/AccountVerifyEditeViewStyle"
         android:layout_marginTop="6dp">
 
-        <EditText
-            android:id="@+id/editBankNo"
+        <com.letv.wallet.account.ui.CardEditText
+            android:id="@+id/editCardNum"
             android:layout_width="0dp"
             android:layout_weight="1.0"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:background="@null"
+            app:ErrorTextColor="#FFFFFF"
             style="@style/AccountVerifyEditeTextStyle"
             android:hint="@string/account_verify_input_bank_no"/>
 
@@ -58,8 +66,8 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/editMobileNo"
+    <com.letv.wallet.account.ui.PhoneEditText
+        android:id="@+id/editPhone"
         android:layout_below="@id/viewBank"
         android:layout_marginTop="6dp"
         android:layout_width="match_parent"
@@ -71,7 +79,7 @@
         android:id="@+id/line2"
         android:layout_width="match_parent"
         style="@style/AccountVerifyLine"
-        android:layout_below="@id/editMobileNo"/>
+        android:layout_below="@id/editPhone"/>
     <LinearLayout
         android:id="@+id/viewSmsCode"
         android:layout_below="@id/line2"
@@ -80,17 +88,18 @@
         android:orientation="horizontal"
         style="@style/AccountVerifyEditeViewStyle">
 
-        <EditText
+        <com.letv.wallet.account.ui.SmsCodeEditText
             android:id="@+id/editSmsCode"
             android:layout_width="0dp"
             android:layout_weight="1.0"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:background="@null"
+            android:inputType="number"
             style="@style/AccountVerifyEditeTextStyle"
             android:hint="@string/account_verify_input_sms_code"/>
 
-        <TextView
+        <com.letv.wallet.account.ui.CountDownView
             android:id="@+id/tvGetSmsCode"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -99,6 +108,42 @@
             android:layout_marginLeft="16dp"
             android:clickable="true"
             android:text="@string/account_verify_get_sms_code"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/btnOk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        style="@style/LargeButton.SectionBase"
+        android:text="@string/account_verify_btn_comfire_update"
+        android:enabled="false"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="66dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@id/btnOk"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp">
+
+        <com.letv.shared.widget.LeCheckBox
+            android:id="@+id/checkAgreement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"/>
+        <TextView
+            android:id="@+id/tvAgreement"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:lines="2"
+            android:lineSpacingExtra="2dp"
+            android:textSize="14sp"
+            android:textColor="@color/account_verify_text_hint_color" />
 
     </LinearLayout>
 
