--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AccountVerifyEditeTextStyle" >
-        <item name="android:textColorHint">#B3B3B3</item>
+        <item name="android:textColorHint">@color/account_verify_text_hint_color</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textCursorDrawable">@drawable/color_cursor</item>
     </style>
@@ -49,4 +49,19 @@
         <item name="android:layout_height">@dimen/setting_divider_height</item>
         <item name="android:background">@color/divider_secondary_horizontal_color</item>
     </style>
+
+    <style name="LargeButton" parent="@style/Widget.Eui.Button">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="LargeButton.SectionBase">
+        <item name="android:layout_marginLeft">@dimen/account_padding_default</item>
+        <item name="android:layout_marginRight">@dimen/account_padding_default</item>
+    </style>
+
+    <style name="PhoneEditText">
+        <item name="android:layout_marginLeft">@dimen/padding_default</item>
+        <item name="android:layout_marginRight">@dimen/padding_default</item>
+    </style>
+
 </resources>
