143-wallet: Set page
Ticket: LEUIAPP-262

Solution:
新增设置页面，
添加实名认证/支付密码条目
根据数据里的认证状态显示，并保存认证状态/和密码设置状态到内存中
点击密码条目时判断保存的认证状态：
  未认证跳转实名认证页面
  已认证判断是否设置密码：
    未设置获取设置密码的URl并跳转
    已设置获取更改密码的URl并跳转

Change-Id: I5a3c9573b07833f84209aa191cf21c40ea8c11cb
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/res/values/colors.xml
+++ b/LePay/res/values/colors.xml
@@ -3,5 +3,10 @@
     <!--account-->
     <color name="account_primary_color">#447DE9</color>
 
+    <!-- Setting -->
+    <color name="colorSettingPrimary">#447DE9</color>
+    <color name="setting_content_bg_color">#447DE9</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="divider_secondary_horizontal_color">#F2F2F2</color>
 
 </resources>
