--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -23,4 +23,30 @@
         <item name="android:layout_marginRight">@dimen/account_horizontal_margin</item>
         <item name="android:layout_height">1px</item>
     </style>
+
+    <style name="SettingListItemTextStyle">
+        <item name="android:textColor">#262626</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="SettingListItemFlagTextStyle">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="SettingListItemStyle" parent="SettingListItemTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/setting_item_height</item>
+        <item name="android:layout_marginLeft">@dimen/margin_default</item>
+        <item name="android:layout_marginRight">@dimen/margin_default</item>
+        <item name="android:gravity">center_vertical|left</item>
+    </style>
+
+    <style name="SettingListDividerLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/setting_divider_height</item>
+        <item name="android:background">@color/divider_secondary_horizontal_color</item>
+    </style>
 </resources>
