--- a/LePay/res/values/theme.xml
+++ b/LePay/res/values/theme.xml
@@ -5,5 +5,12 @@
         <item name="walletPrimaryColor">@color/account_primary_color</item>
     </style>
 
-
+    <!-- Setting -->
+    <style name="SettingTheme" parent="AppTheme.Arrow">
+        <item name="walletPrimaryColor">@color/colorWhite</item>
+        <item name="android:statusBarColor">@color/colorSettingPrimary</item>
+        <item name="android:windowBackground">@color/colorWhite</item>
+        <item name="android:titleTextColor">@color/colorWhite</item>
+    </style>
+    <style name="SettingWebTheme" parent="AppTheme.Arrow"/>
 </resources>
