143-wallet:解决更改字体大小引发的bug
Ticket:LEUIAPP-685
bug原因：更改字体后，界面的生命周期会发生改变
bug解决办法：设置界面针对字体大小更改时，不发生改变

附带添加主页的英文资源，加密时不产生换行，更容易解读。

Change-Id: Iaa6b3183f1aa6d1d3c0300b4c152c396dd5d440b
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/res/values/string_main.xml
+++ b/LetvWallet/res/values/string_main.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="main_top_finance"></string>
+    <string name="main_tab_recommend">recommended</string>
+    <string name="main_tab_wallet">wallet</string>
+    <string name="main_tab_my">mine</string>
 </resources>
