143-wallet: mobile Contacts name can be displayed when the network is disconnected
Ticket: LEUIAPP-647

Solution:
分别显示或隐藏联系人名称/中间分割线/运营商信息view
选择联系人后更新联系人名称 清空商品和运营商信息，发起新号码商品和运营商请求

Change-Id: I7f5d293774c8ae80b0492de23033075c87adcf55
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWallet/res/layout/mobile_number_selector.xml
+++ b/LetvWallet/res/layout/mobile_number_selector.xml
@@ -64,8 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:orientation="horizontal"
-            android:visibility="invisible">
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tv_contact_name"
@@ -76,7 +75,8 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/mobilePrimaryTvColor"
-                android:textSize="@dimen/mobile_phone_desc_tv_size" />
+                android:textSize="@dimen/mobile_phone_desc_tv_size"
+                android:visibility="invisible" />
 
             <View
                 android:id="@+id/line1"
@@ -86,7 +86,8 @@
                 android:layout_marginLeft="@dimen/margin_default"
                 android:layout_marginRight="@dimen/margin_default"
                 android:background="@color/colorDividerLine"
-                android:clickable="true" />
+                android:clickable="true"
+                android:visibility="invisible"/>
 
             <TextView
                 android:id="@+id/tv_mobile_desc"
@@ -95,7 +96,8 @@
                 android:layout_gravity="center_vertical"
                 android:maxLines="1"
                 android:textColor="@color/mobilePrimaryTvColor"
-                android:textSize="@dimen/mobile_phone_desc_tv_size" />
+                android:textSize="@dimen/mobile_phone_desc_tv_size"
+                android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
