131-Lepay: Account : 绑卡及卡列表
概要： 添加卡列表界面： 1 本地缓存已开户& 已实名 查询我的卡列表 ；
                        1.1  否则   查询basic & 卡列表
                        1.2  更新basic 账户状态 未开户 去开户
                        1.3  已开户  更新卡列表（由于未实名和已实名， 卡列表都可为空）；
                        1.4  开户失败 无手机号 跳转绑定手机号界面 ； 其他禁用添加卡片

                        2 添加卡片 (无手机号开户失败）跳转绑手机界面 ； 未实名 跳转实名认证 ；否则 跳转添加卡片界面 ；

                        3 删除多余的aidl接口；

                        4 首页开户查询逻辑： 本地已开户& 已实名 查询卡列表： 否则查询basic & cardlist， 返回结果未开户，默认开一次户

Ticket: LEUIAPP-265

Change-Id: I876cd95bd0841fa5648297fb62c31c1e580520ae
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -20,4 +20,14 @@
     <string name="account_verify_countdoun_s">S</string>
     <string name="account_verify_fail">实名认证失败</string>
     <string name="account_verify_please_check_agreement">请勾选协议</string>
+    <string name="account_card_type_debit">借记卡</string>
+    <string name="account_card_type_credit">信用卡</string>
+    <string name="account_card_type_passbook">存折</string>
+    <string name="account_card_type_other">其它</string>
+    <string name="account_card_add_bankcard">添加银行卡</string>
+    <string name="account_card_title">银行卡</string>
+    <string name="account_card_menu_title">帮助</string>
+    <string name="account_card_item_click_tip">暂时无法操作，请查看帮助</string>
+
+
 </resources>
