--- a/LePay/res/layout/account_card_list_item.xml
+++ b/LePay/res/layout/account_card_list_item.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:minHeight="120dp"
     android:padding="@dimen/account_padding_default"
     android:background="@drawable/card_bg_top_round_shape_white"
     android:layout_marginTop="6dp">
-    <ImageView
+
+    <com.letv.shared.widget.BorderedCircleImageView
         android:id="@+id/imgBankIcon"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        />
+        android:alpha="@dimen/le_img_alpha"
+        app:round_background="true"
+        app:circle_radius="14dp"
+        android:padding="2dp"
+        android:background="@color/colorWhite"/>
     <TextView
         android:id="@+id/tvBankName"
         android:layout_width="wrap_content"
