--- a/LePay/res/menu/menu_card_list.xml
+++ b/LePay/res/menu/menu_card_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/action_coupon_expired"
+        android:id="@+id/action_card_list"
         android:orderInCategory="100"
         android:icon="@null"
         android:title="@string/account_card_menu_title"
